src/test/resources/valid/ProvidesClassTestClass.java
import io.higgs.spi.ProviderFor;

@ProviderFor(Object.class)
public class ProvidesClassTestClass {
	
}
