src/test/resources/invalid/EnumTestClass.java
import java.util.RandomAccess;

import io.higgs.spi.ProviderFor;

@ProviderFor(RandomAccess.class)
public enum EnumTestClass implements RandomAccess {
	
}
